--- a/SignUp/src/app/aboutpage/aboutpage.component.html
+++ b/SignUp/src/app/aboutpage/aboutpage.component.html
@@ -10,20 +10,19 @@
 
          <app-header (toggleSidebarForMe)="sideBarToggler()">
          </app-header>
-        
-        
+    
          <router-outlet>
          
   
 <main>
-    <h1 fxLayoutAlign="center center" style="font-weight: bolder; color: black; " >About Us</h1>
+    <h1 fxLayoutAlign="center center" style="font-weight: bolder; color: black; " >Who Are We ? </h1>
 
     <div class="div1">
         
-   <h1 style="padding: 100px; margin: 10px; color: rgb(10, 10, 10); ">  We power the momentum of modern talent-focused enterprises </h1>
+   <h1 style="padding: 100px; margin: 10px; color: rgb(10, 10, 10); " id="tag" >  We power the <h1 style="font-weight: bolder; color: blue; ">Momentum</h1> of modern talent-focused enterprises </h1>
       <h2 style="color: rgb(10, 10, 10);" >We are the momentum that powers your growth</h2>
 
-   <p  style="padding: 1px;  color: rgb(3, 3, 3); " >
+   <p  style="  color: rgb(3, 3, 3); " >
 
     Today, with our comprehensive platform ,we serve over 50+ top enterprises across Asia Pacific and power seamless employee experience over thousands of devices.
     Our technology is a reflection of the growing needs of modern, talent-focused enterprises and their increasingly complex HR use cases; of people and business leaders who want technology to do more. We are on a mission to power the Talent Economy with our Tech.
