--- a/SignUp/src/app/aboutpage/aboutpage.component.css
+++ b/SignUp/src/app/aboutpage/aboutpage.component.css
@@ -1,17 +1,5 @@
 
-.form-inline{
-    display: flex;
-    position: absolute;
-    left: 93vw;
-}
 
-
-button{
-
-    padding: 4px;
-    height: 45px;
-
-}
 
 main{
     
@@ -25,9 +13,7 @@ main{
 
 }
 
-a:hover{
-    background-color: blue;
-}
+
 
 
 
@@ -42,37 +28,34 @@ mat-drawer{
     width: 260px;
     background: rgb(255, 255, 255);
     /* background-color: white; */
-    
 }
 
 mat-drawer-container{
-    height: 100%;
+   
+    height: 100vh;
 }
 
 
 .content{
     /* padding: 5px; */
     margin-top: 5px;
-    height: 400px;
+    height: 500px;
     width:  450px;
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
     
     
 }
 
 p {
     padding: 10px;
+    margin-top: 1px;
 }
 
-/* */
 
-/* *{
-    margin: 0 ; padding: 0; 
-    box-sizing: border-box;
-    /* background: red; 
-}*/
+
+
 
 
 
