--- a/SignUp/src/app/sidenav/sidenav.component.html
+++ b/SignUp/src/app/sidenav/sidenav.component.html
@@ -11,9 +11,6 @@
     <a mat-list-item routerLink="../dashboard" routerLinkActive="list-item-active">
     <mat-icon>home</mat-icon>Home   </a>
 
-    <a mat-list-item routerLink="../aboutpage" routerLinkActive="list-item-active">
-        <mat-icon>supervised_user_circle</mat-icon>About  </a>
-
     <a mat-list-item routerLink="../create-task-dashboard" routerLinkActive="list-item-active">
     <mat-icon >edit</mat-icon>Create Task </a>
 
@@ -25,6 +22,9 @@
 
     <a mat-list-item routerLink="/view-meeting" routerLinkActive="list-item-active">
         <mat-icon>assignment</mat-icon>View Meeting </a>
+
+        <a mat-list-item routerLink="../aboutpage" routerLinkActive="list-item-active">
+            <mat-icon>supervised_user_circle</mat-icon>About Us</a>
         
 <!-- 
     <a mat-list-item routerLink="/home" routerLinkActive="list-item-active">
