--- a/SignUp/src/app/view-meeting/view-meeting.component.html
+++ b/SignUp/src/app/view-meeting/view-meeting.component.html
@@ -207,7 +207,7 @@
       </tr>
       </tbody>
     </table>
-    <button type="button" class="btn btn-outline-danger" routerLink="../create-meeting-dashboard">New Meeting</button>
+    <button type="button" id="newmeet" class="btn btn-outline-danger" routerLink="../create-meeting-dashboard">New Meeting</button>
   </div>
 </mat-tab>
 
