--- a/SignUp/src/app/view-task/view-task.component.html
+++ b/SignUp/src/app/view-task/view-task.component.html
@@ -15,7 +15,7 @@
 
 <mat-tab-group mat-align-tabs="center" >
 <!-- #enddocregion align-start -->
-  <mat-tab label="Assigned Tasks" style="font-size: large;" class="label"><h3 class="table-category">Assigned Tasks</h3>
+  <mat-tab label="Assigned Tasks" style="font-size: large;" class="label">
     <div class="container">
         <table class="table table-bordered table-striped">
           <thead class="table-heading">
@@ -71,7 +71,7 @@
         </table>
         
       </div></mat-tab>
-  <mat-tab label="Tasks Created by me"><h3 class="table-category">Tasks Created by me</h3>
+  <mat-tab label="Tasks Created by me">
     <div class="container">
         <table class="table table-bordered table-striped">
           <thead class="table-heading">
