--- a/SignUp/src/app/view-meeting/view-meeting.component.css
+++ b/SignUp/src/app/view-meeting/view-meeting.component.css
@@ -5,6 +5,7 @@
   .container{
       font-family:sans-serif;
       margin-top: 12px;
+      margin-left: 2cm;
   }
   .table-striped{
     border-collapse: collapse;
@@ -91,4 +92,7 @@
         margin: 0 ; padding: 0; 
         box-sizing: border-box;
         /* background: red; */
+    }
+    #newmeet{
+        margin-top: 5px;
     }
