--- a/SignUp/src/app/dashboard/dashboard.component.html
+++ b/SignUp/src/app/dashboard/dashboard.component.html
@@ -158,7 +158,7 @@
                                        style="border: 0ch"
                                        aria-label="Button that displays a tooltip that hides when scrolled out of the container"
                                      >
-                                       <mat-icon style="border: 0ch">help_outline</mat-icon>
+                                       <mat-icon style="border: 0ch">edit</mat-icon>
                                      </button>
                                    </P>
                          
@@ -188,7 +188,7 @@
                                        style="border: 0ch"
                                        aria-label="Button that displays a tooltip that hides when scrolled out of the container"
                                      >
-                                       <mat-icon style="border: 0ch">help_outline</mat-icon>
+                                       <mat-icon style="border: 0ch">edit</mat-icon>
                                      </button>
                                    </P>
                                    <mat-card-actions>
@@ -217,7 +217,7 @@
                                        style="border: 0ch"
                                        aria-label="Button that displays a tooltip that hides when scrolled out of the container"
                                      >
-                                       <mat-icon style="border: 0ch">help_outline</mat-icon>
+                                       <mat-icon style="border: 0ch">assignment</mat-icon>
                                      </button>
                                    </P>
                          
@@ -247,7 +247,7 @@
                                        style="border: 0ch"
                                        aria-label="Button that displays a tooltip that hides when scrolled out of the container"
                                      >
-                                       <mat-icon style="border: 0ch">help_outline</mat-icon>
+                                       <mat-icon style="border: 0ch">assignment</mat-icon>
                                      </button>
                                    </P>
                                    <mat-card-actions>
