--- a/SignUp/src/app/add-people/add-people.component.css
+++ b/SignUp/src/app/add-people/add-people.component.css
@@ -2,6 +2,7 @@
     min-height: 60px;
     overflow: hidden;
     display: block;
+    padding: 8px;
   }
   .text-center{
     text-align: center;
@@ -64,6 +65,7 @@
   }
   .icon-logo{
     margin-left: 12px;
+    margin-right: 10px;
     font-size: 30px;
   }
   .fullName{
@@ -71,7 +73,10 @@
     font-weight: bold;
 
   }
-
+  .category{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    color: #141E61;
+  }
 
 
 :host{
@@ -79,6 +84,9 @@
   flex-direction: column;
   height: 100%;
 
+}
+.selector{
+  margin-bottom: 15px;
 }
 
 mat-drawer{
@@ -115,4 +123,8 @@ p {
   margin: 0 ; padding: 0; 
   box-sizing: border-box;
   /* background: red; */
+}
+.col{
+  padding:5px;
+  padding-top: 15px;
 }
