--- a/SignUp/src/app/add-people/add-people.component.html
+++ b/SignUp/src/app/add-people/add-people.component.html
@@ -18,7 +18,7 @@
         <div class="col">
             <mat-card>
                 <div class="text-center">
-                    <h2>Invite People</h2>
+                    <h2 class="category">Invite People</h2>
                 </div>
                 <div>
                     <mat-form-field class="searchbar" appearance="outline">
@@ -34,7 +34,7 @@
         <div class="col">
             <mat-card>
                 <div class="text-center">
-                    <h2>Selected People</h2>
+                    <h2 class="category">Selected People</h2>
                 </div>
                 <div>
                     <mat-form-field class="searchbar" appearance="outline">
@@ -70,8 +70,8 @@
                         </div>
                     </div>
                 </div>
-                <div style="text-align: end;">
-                    <button mat-raised-button color="warn" (click)="selectAllPeople()" >All </button>
+                <div style="text-align: center; " >
+                    <button mat-raised-button color="warn"  class="selector" (click)="selectAllPeople()" >All </button>
                 </div>
             </mat-card>
         </div>
@@ -96,8 +96,8 @@
                         </div>
                     </div>
                 </div>
-                <div style="text-align:start;">
-                    <button mat-raised-button color="primary" (click)="clearAllPeople()" >clear</button>
+                <div style="text-align:center;">
+                    <button mat-raised-button color="primary" class="selector" (click)="clearAllPeople()" >clear</button>
                 </div>
 
             </mat-card>
