--- a/SignUp/src/app/create-task-dashboard/create-task-dashboard.component.html
+++ b/SignUp/src/app/create-task-dashboard/create-task-dashboard.component.html
@@ -119,7 +119,8 @@
                               </button>
                         </div>
                         <div class="col" style="text-align: center;">
-                            <button mat-raised-button color="warn" (click)="onSubmitTask()" (click)="stepper.reset()">Create and reset</button>
+                            <button mat-raised-button color="warn" (click)="onSubmitTask()" data-bs-toggle="modal" (click)="stepper.reset()">Create</button>
+                            
                         </div>
                         <div class="col">
 
