--- a/SignUp/src/app/create-task-dashboard/create-task-dashboard.component.html
+++ b/SignUp/src/app/create-task-dashboard/create-task-dashboard.component.html
@@ -19,6 +19,10 @@
     <mat-card class="card" >
         <mat-stepper labelPosition="bottom" #stepper >
             <mat-step [stepControl]="TaskFormGroup">
+                <div *ngIf="alert" id="alert" class="alert alert-success alert-dismissible fade show" role="alert">
+                <strong>Task added</strong> You have successfully created a task.
+                <button type="button" (click)="closeAlert()" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+              </div>
 
                 <form [formGroup]="TaskFormGroup" class="text-center" (ngSubmit)="onCreateTask()">
                     <ng-template matStepLabel>Create Task</ng-template>
