--- a/SignUp/src/app/update-task/update-task.component.html
+++ b/SignUp/src/app/update-task/update-task.component.html
@@ -13,6 +13,10 @@
          <router-outlet>
 
 <mat-card class="card">
+  <div *ngIf="alert" id="alert" class="alert alert-success alert-dismissible fade show" role="alert">
+    <strong>Task updated successfully</strong> 
+    <button type="button" (click)="closeAlert()" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+  </div>
   
     <div class="row">
         <mat-form-field class="half-row" appearance="outline">
