integrated update task

--- a/SignUp/src/app/add-user/add-user.component.html
+++ b/SignUp/src/app/add-user/add-user.component.html
@@ -97,7 +97,7 @@
     </div>
     
     <div class="row" style="margin-top: 25px;text-align: center;">
-        <button mat-raised-button color="primary"  (click)="addPeople()" >Add</button>
+        <button mat-raised-button color="primary"  (click)="addPeople()" routerLink="../update-task" >Add</button>
      </div>
 
 
