--- a/SignUp/src/app/update-task/update-task.component.html
+++ b/SignUp/src/app/update-task/update-task.component.html
@@ -50,7 +50,7 @@
 <div class="row">
 
         <!-- Button trigger modal -->
- <button type="button" id="addUsers" class="btn btn-primary"   routerLink="../add-user">
+ <button type="button" id="addUsers" class="btn btn-primary" (click)="doPrepareSelectedPeopleComponant()"  routerLink="../add-user">
     Add User
  </button>
   
