all task related functions integration completed

--- a/SignUp/src/app/update-task/update-task.component.html
+++ b/SignUp/src/app/update-task/update-task.component.html
@@ -116,6 +116,9 @@
   <button type="button" id="addUsers" class="btn btn-danger"  data-bs-toggle="modal" data-bs-target="#exampleModal" >
     Delete User
  </button>
+ <button type="button" id="addUsers" class="btn btn-primary" (click)="finalizeUsers()" >
+  Finalize Users
+</button>
   
   <!-- Modal -->
   <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
