--- a/SignUp/src/app/show-task/show-task.component.html
+++ b/SignUp/src/app/show-task/show-task.component.html
@@ -4,7 +4,7 @@
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">Description</h5>
-          <p class="card-text">Create ppt</p>
+          <p class="card-text">{{task.description}}</p>
         </div>
       </div>
     </div>
@@ -12,7 +12,7 @@
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">Created by</h5>
-          <p class="card-text">katy</p>
+          <p class="card-text">{{task.creatorName}}</p>
         </div>
       </div>
     </div>
@@ -21,16 +21,16 @@
         <div class="card">
           <div class="card-body">
             <h5 class="card-title">Assigned on</h5>
-            <p class="card-text">12/02/2022</p>
+            <p class="card-text">{{task.creationTime}}</p>
           </div>
         </div>
     </div>
 
-    <div class="col-sm-4" id="feature">
+    <div class="col-sm-4" id="feature"> 
         <div class="card">
           <div class="card-body">
             <h5 class="card-title">Due date</h5>
-            <p class="card-text">15/02/2022</p>
+            <p class="card-text">{{task.deadline}}</p>
           </div>
         </div>
     </div>
@@ -38,20 +38,13 @@
     <div class="col-sm-4" id="feature">
         <div class="card">
           <div class="card-body">
-            <h5 class="card-title">Member progress</h5>
-            <ul class="list-group">
+            <h5 class="card-title" >Member progress</h5>
+            <ul class="list-group" *ngFor="let item of task.userTaskStatuses">
                 <li class="list-group-item d-flex justify-content-between align-items-center">
-                  Katy
-                  <span class="badge bg-secondary rounded-pill">Completed</span>
+                  {{item.name}}
+                  <span class="badge bg-secondary rounded-pill">{{item.status}}</span>
                 </li>
-                <li class="list-group-item d-flex justify-content-between align-items-center">
-                  Jim
-                  <span class="badge bg-success rounded-pill">Incomplete</span>
-                </li>
-                <li class="list-group-item d-flex justify-content-between align-items-center">
-                  Alex
-                  <span class="badge bg-secondary rounded-pill">Completed</span>
-                </li>
+                
               </ul>
          </div>
     </div>
