--- a/SignUp/src/app/add-people/add-people.component.html
+++ b/SignUp/src/app/add-people/add-people.component.html
@@ -1,8 +1,7 @@
 
-<mat-drawer-container>
+<!-- <mat-drawer-container>
 
     <mat-drawer mode="side" [opened]="sideBarOpen">
-           <!-- <mat-drawer mode="side" opened="true"> -->
            <app-sidenav> </app-sidenav>
     </mat-drawer>
 
@@ -11,7 +10,7 @@
            <app-header (toggleSidebarForMe)="sideBarToggler()">
            </app-header>
            
-           <router-outlet>
+           <router-outlet> -->
 
 <div class="container">
     <div *ngIf="alert" id="alert" class="alert alert-success alert-dismissible fade show" role="alert">
