--- a/SignUp/src/app/show-task/show-task.component.html
+++ b/SignUp/src/app/show-task/show-task.component.html
@@ -1,5 +1,23 @@
-<div class="row">
-    <div class="d-flex p-2 bd-highlight" id="task-name">Complete Assesment</div>
+<mat-drawer-container>
+
+  <mat-drawer mode="side" [opened]="sideBarOpen">
+         <!-- <mat-drawer mode="side" opened="true"> -->
+         <app-sidenav> </app-sidenav>
+  </mat-drawer>
+
+  <mat-drawer-content>
+
+         <app-header (toggleSidebarForMe)="sideBarToggler()">
+         </app-header>
+        
+        
+ <router-outlet>
+
+
+
+ <div class="container">
+ <div class="row">
+    <div class="d-flex p-2 bd-highlight" id="task-name">{{task.title}}</div>
     <div class="col-sm-4" id="feature">
       <div class="card">
         <div class="card-body">
@@ -42,7 +60,7 @@
             <ul class="list-group" *ngFor="let item of task.userTaskStatuses">
                 <li class="list-group-item d-flex justify-content-between align-items-center">
                   {{item.name}}
-                  <span class="badge bg-secondary rounded-pill">{{item.status}}</span>
+                  <span class="badge bg-primary rounded-pill">{{item.status}}</span>
                 </li>
                 
               </ul>
@@ -50,3 +68,12 @@
     </div>
     </div>
   </div>
+</div>
+
+</router-outlet>
+
+</mat-drawer-content>
+
+</mat-drawer-container>
+
+<router-outlet></router-outlet>
