--- a/SignUp/src/app/update-task/update-task.component.html
+++ b/SignUp/src/app/update-task/update-task.component.html
@@ -13,8 +13,8 @@
          <router-outlet>
 
 <mat-card class="card">
-  <div *ngIf="alert" id="alert" class="alert alert-success alert-dismissible fade show" role="alert">
-    <strong>Task updated successfully</strong> 
+  <div *ngIf="alert" id="alert"  style="height: 35px;"class="alert alert-success alert-dismissible fade show" role="alert">
+    Task updated successfully
     <button type="button" (click)="closeAlert()" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
   </div>
   
@@ -113,10 +113,10 @@
     </div>
   </div>
 
-  <button type="button" id="addUsers" class="btn btn-danger"  data-bs-toggle="modal" data-bs-target="#exampleModal" >
+  <!-- <button type="button" id="addUsers" class="btn btn-danger"  data-bs-toggle="modal" data-bs-target="#exampleModal" >
     Delete User
- </button>
- <button type="button" id="addUsers" class="btn btn-primary" (click)="finalizeUsers()" >
+ </button> -->
+ <button type="button" id="addUsers" class="btn btn-danger" (click)="finalizeUsers()" >
   Finalize Users
 </button>
   
