--- a/SignUp/src/app/update-meeting/update-meeting.component.html
+++ b/SignUp/src/app/update-meeting/update-meeting.component.html
@@ -1,4 +1,19 @@
 
+<mat-drawer-container>
+
+  <mat-drawer mode="side" [opened]="sideBarOpen">
+         <!-- <mat-drawer mode="side" opened="true"> -->
+         <app-sidenav> </app-sidenav>
+  </mat-drawer>
+
+  <mat-drawer-content>
+
+         <app-header (toggleSidebarForMe)="sideBarToggler()">
+         </app-header>
+        
+     <router-outlet>
+       
+
 <mat-card class="card">
   
     <div class="row">
