--- a/SignUp/src/app/add-people/add-people.component.html
+++ b/SignUp/src/app/add-people/add-people.component.html
@@ -74,7 +74,7 @@
                     </div>
                 </div>
                 <div style="text-align: center; " >
-                    <button mat-raised-button color="warn"  class="selector" (click)="selectAllPeople()" >All </button>
+                    <button mat-raised-button color="warn"  class="selector" (click)="selectAllPeople()" >Add All </button>
                 </div>
             </mat-card>
         </div>
@@ -100,7 +100,7 @@
                     </div>
                 </div>
                 <div style="text-align:center;">
-                    <button mat-raised-button color="primary" class="selector" (click)="clearAllPeople()" >clear</button>
+                    <button mat-raised-button color="primary" class="selector" (click)="clearAllPeople()" >Clear</button>
                 </div>
 
             </mat-card>
