--- a/SignUp/src/app/create-task-dashboard/create-task-dashboard.component.html
+++ b/SignUp/src/app/create-task-dashboard/create-task-dashboard.component.html
@@ -17,7 +17,7 @@
 
 <div class="container" text-center >
     <mat-card class="card" >
-        <mat-stepper labelPosition="bottom" #stepper >
+        <mat-stepper linear labelPosition="bottom" #stepper >
             <mat-step [stepControl]="TaskFormGroup">
                 <div *ngIf="alert" id="alert" class="alert alert-success alert-dismissible fade show" role="alert">
                 <strong>Task added</strong> You have successfully created a task.
