--- a/SignUp/src/app/create-task-dashboard/create-task-dashboard.component.html
+++ b/SignUp/src/app/create-task-dashboard/create-task-dashboard.component.html
@@ -102,7 +102,7 @@
                           </button>
                     </div>
                     <div class="col" style="text-align: end;">
-                        <button mat-raised-button color="warn" (click)="onSubmitTask()" data-bs-toggle="modal" routerLink="../view-task">Create
+                        <button mat-raised-button color="warn" (click)="onSubmitTask()" data-bs-toggle="popover" data-bs-trigger="focus"  data-bs-content="Task created successfully." routerLink="../view-task">Create
                             <!-- <mat-icon >keyboard_arrow_right</mat-icon> -->
                           </button>
                     </div>
