--- a/SignUp/src/app/update-task/update-task.component.html
+++ b/SignUp/src/app/update-task/update-task.component.html
@@ -63,10 +63,10 @@
         </div>
     </div>
 
-<div class="row">
+<div class="row"> 
 
         <!-- Button trigger modal -->
- <button type="button" id="addUsers" class="btn btn-primary" (click)="doPrepareSelectedPeopleComponant()"  routerLink="../add-user">
+ <button type="button" id="addUsers" class="btn btn-primary" (click)="moveToAddUser()">
     Add User
  </button>
   
