--- a/SignUp/src/app/update-meeting/update-meeting.component.css
+++ b/SignUp/src/app/update-meeting/update-meeting.component.css
@@ -18,3 +18,24 @@
 .dropdownMenuButton1{
     margin-left: 20px;
 }
+
+:host {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+  }
+  
+  mat-drawer {
+    width: 260px;
+    background: rgb(255, 255, 255);
+    /* background-color: white; */
+  }
+  
+  mat-drawer-container {
+    height: 100%;
+  }
+  
+ 
+  
+  /* */
+  
